[tool.poetry]
name = "pydash-cheatsheet"
version = "0.1.0"
description = "A beautiful cheatsheet for pydash"
authors = ["brunodantas <brunowelldm@gmail.com>"]
readme = "README.md"
packages = [{include = "pydash_cheatsheet"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.4.6"
pydash = "^7.0.6"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
